# flake8-github-actions

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flake8.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  rustpython_ci_linux.yml
flake8_github_action/: __init__.py  __main__.py  annotation.py  checks.py  flake8_app.py  reporters
flake8_github_actions/: __init__.py
tests/: bad_code.py  test_output.py
tests/test_output_/: test_output.txt
