[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-github-actions"
version = "0.1.0"
description = "GitHub Actions integration for flake8."
readme = "README.rst"
keywords = [ "flake8", "github", "github-actions",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[tool.importcheck]
always = [ "flake8_github_actions",]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-github-actions"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-github-actions/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-github-actions"

[project.entry-points."flake8.report"]
github = "flake8_github_actions:GitHubFormatter"
