[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-github-actions"
version = "0.1.1"
description = "GitHub Actions integration for flake8."
readme = "README.rst"
requires-python = ">=3.6"
keywords = [ "flake8", "github", "github-actions",]
dynamic = [ "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-formate/flake8-github-actions"
"Issue Tracker" = "https://github.com/python-formate/flake8-github-actions/issues"
"Source Code" = "https://github.com/python-formate/flake8-github-actions"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_github_actions"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[project.entry-points."flake8.report"]
github = "flake8_github_actions:GitHubFormatter"

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
