# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = flake8-github-actions
version = 0.1.1
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords = flake8, github, github-actions
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/python-formate/flake8-github-actions
project_urls =
    Issue Tracker = https://github.com/python-formate/flake8-github-actions/issues
    Source Code = https://github.com/python-formate/flake8-github-actions
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Typing :: Typed

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[options.entry_points]
flake8.report = github = flake8_github_actions:GitHubFormatter
